--- a/index.html
+++ b/index.html
@@ -49,5 +49,70 @@
     </div>
   </div>
 </div>
+<div class="sec-3">
+  <h3 class="sec-3__title">Featured Works</h3>
+  <div class="sec-3__column">
+    <div class="column__item">
+      <div class="item__image">
+        <img src="/img/Rectangle 30.jpg">
+      </div>
+      <div class="item__body">
+        <h3 class="body__subtitle">Designing Dashboards</h3>
+        <p class="body__subtext">
+          <span>2020</span>
+          <span>Dashboard</span>
+        </p>
+        <p class="body__text">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+          Velit officia consequat duis enim velit mollit.
+          Exercitation veniam consequat sunt nostrud amet.
+        </p>
+      </div>
+    </div>
+    <div class="column__item">
+      <div class="item__image">
+        <img src="/img/Rectangle 32.jpg">
+      </div>
+      <div class="item__body">
+        <h3 class="body__subtitle">Vibrant Portraits of 2020</h3>
+        <p class="body__subtext">
+          <span>2018</span>
+          <span>Illustration</span>
+        </p>
+        <p class="body__text">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+          Velit officia consequat duis enim velit mollit.
+          Exercitation veniam consequat sunt nostrud amet.
+        </p>
+      </div>
+    </div>
+    <div class="column__item">
+      <div class="item__image">
+        <img src="/img/Rectangle 34.jpg">
+      </div>
+      <div class="item__body">
+        <h3 class="body__subtitle">36 Days of Malayalam type</h3>
+        <p class="body__subtext">
+          <span>2018</span>
+          <span>Typography</span>
+        </p>
+        <p class="body__text">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+          Velit officia consequat duis enim velit mollit.
+          Exercitation veniam consequat sunt nostrud amet.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<footer>
+  <div class="logos__row">
+    <img src="/img/fb.svg" alt="">
+    <img src="/img/insta.svg" alt="">
+    <img src="/img/twitter.svg" alt="">
+    <img src="/img/Linkedin.svg" alt="">
+  </div>
+  <p>Copyright ©2020 All rights reserved </p>
+</footer>
 </body>
 </html>
