--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header class="menu">
   <nav class="menu__navigation">
     <ul class="navigation__list">
-      <li class="list__item">Works</li>
-      <li class="list__item">Blog</li>
-      <li class="list__item">Contact</li>
+      <li class="list__item"><a href="/work/work.html">Works</a></li>
+      <li class="list__item"><a href="/blog/blog.html">Blog</a></li>
+      <li class="list__item"><a href="/contact/contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
