--- a/work/work.html
+++ b/work/work.html
@@ -3,11 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="work.css">
   <title>Work</title>
 </head>
 <body>
-
+  <header class="menu">
+    <nav class="menu__navigation">
+      <ul class="navigation__list">
+        <li class="list__item"><a href="/work/work.html">Works</a></li>
+        <li class="list__item"><a href="/blog/blog.html">Blog</a></li>
+        <li class="list__item"><a href="/contact/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+<div class="work__section">
+  <h1 class="work__section-title">Designing Dashboards with usability in mind</h1>
+  <div class="container-1__box">
+    <span class="box__span">
+      <span>2020</span>
+      <p>Dashboard, User Experience Design</p>
+    </span>
+  </div>
+  <div class="work__section-container-2">
+    <p class="container-2__p">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+    </p>
+    <img src="/img/Rectangle 4.jpg" alt="" class="container-2__img">
+    </div>
+  <div class="work__section-container-3">
+    <h3 class="container-3__h3">Heading 1</h3>
+    <h4 class="container-3__h4">Heading 2</h4>
+    <p class="container-3__p">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+    </p>
+    <img src="/img/Rectangle 5.jpg" alt="" class="container-3__img1">
+    <img src="/img/Rectangle 6.jpg" alt="" class="container-3__img2">
+  </div>
+</div>
 </body>
 </html>
+
