--- a/work/work.html
+++ b/work/work.html
@@ -26,9 +26,11 @@
     </span>
   </div>
   <div class="work__section-container-2">
-    <p class="container-2__p">
-      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-    </p>
+    <div class="container-2_p-block">
+      <p class="container-2__p">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+      </p>
+    </div>
     <img src="/img/Rectangle 4.jpg" alt="" class="container-2__img">
     </div>
   <div class="work__section-container-3">
@@ -37,8 +39,10 @@
     <p class="container-3__p">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
     </p>
-    <img src="/img/Rectangle 5.jpg" alt="" class="container-3__img1">
-    <img src="/img/Rectangle 6.jpg" alt="" class="container-3__img2">
+    <div class="container-3__imgblock">
+      <img src="/img/Rectangle 5.jpg" alt="" class="container-3__img1">
+      <img src="/img/Rectangle 6.jpg" alt="" class="container-3__img2">
+    </div>
   </div>
 </div>
 </body>
